--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
+    "formik": "^2.2.6",
     "framer-motion": "^3.3.0",
     "hex-to-rgba": "^2.0.1",
     "prop-types": "^15.7.2",
