--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "4.0.2",
     "react-use-dimensions": "^1.2.1",
     "styled-components": "^5.2.1",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
